@@ -22,6 +22,8 @@ cumNormStatFast,
 expSummary,
 exportMat,
 exportStats,
+fitDO,
+fitMeta,
 fitPA,
 fitZig,
 filterData,
